# reel-maestro

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Contributing.md  README.md  SECURITY.md  deny.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
src/: assemble.rs  captions.rs  config.rs  extract.rs  ffmpeg.rs  images.rs  main.rs  model.rs  music.rs  openrouter.rs  script.rs  transcribe.rs  tts.rs  video.rs
tests/: sample_script.txt
